# ARF

./: CMakeLists.txt  README.md
include/: ARF.h  Database.h  Query.h  Statistics.h  Util.h
src/: ARF.cpp  CMakeLists.txt  Database.cpp  Statistics.cpp  Util.cpp
test/: CMakeLists.txt  test_arf.cpp
